<resources>
    <string name="app_name">Workshop Bitalino</string>

    <!-- permission check dialog -->
    <string name="permission_check_dialog_title">This app needs location access</string>
    <string name="permission_check_dialog_message">Please grant location access so this app can detect PLUX\'s Bluetooth devices</string>
    <string name="permission_check_dialog_positive_button">OK</string>

    <!-- permission denied dialog -->
    <string name="permission_denied_dialog_title">Functionality limited</string>
    <string name="permission_denied_dialog_message">Since location access has no been granted, this app will not be able to discover bluetooth devices.</string>
    <string name="permission_denied_dialog_positive_button">OK</string>
    <string name="name">Name:</string>
    <string name="mac_address">MAC address:</string>
    <string name="elapsed_time">Elapsed time:</string>
    <string name="state">State:</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="state_button">State</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="trigger">Trigger</string>
    <string name="battery_threshold">Battery Threshold</string>
    <string name="results">Results:</string>
    <string name="pwm">PWM</string>
</resources>
