<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>
        <variable
            name="device"
            type="android.bluetooth.BluetoothDevice"/>
    </data>

    <RelativeLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:android="http://schemas.android.com/apk/res/android">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/background_light"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    android:text="@string/name"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/dimen_bitalino_header"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/device_name_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    android:textSize="16sp"
                    android:text="@{device.name}"
                    android:textStyle="italic" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    android:text="@string/mac_address"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/mac_address_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    android:textSize="16sp"
                    android:text="@{device.address}"
                    android:textStyle="italic" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    android:text="@string/elapsed_time"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/elapsed_time_Text_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    android:textSize="16sp"
                    android:textStyle="italic" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    android:text="@string/state"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/state_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    android:textSize="16sp"
                    android:textStyle="italic" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="2dp"
                android:background="@android:color/holo_blue_dark"
                android:orientation="horizontal"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/connect_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/connect" />

                    <Button
                        android:id="@+id/disconnect_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/disconnect" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/start_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/start" />

                    <Button
                        android:id="@+id/stop_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/stop" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/bitalino_linear_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="visible">

                <Button
                    android:id="@+id/state_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:text="@string/state_button" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <RadioButton
                        android:id="@+id/digital_1_radio_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/_1"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <RadioButton
                        android:id="@+id/digital_2_radio_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/_2"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <RadioButton
                        android:id="@+id/digital_3_radio_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/_3"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:visibility="gone" />

                    <RadioButton
                        android:id="@+id/digital_4_radio_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/_4"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:visibility="gone" />
                </LinearLayout>

                <Button
                    android:id="@+id/trigger_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:text="@string/trigger" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="gone"
                    android:orientation="horizontal">

                    <SeekBar
                        android:id="@+id/battery_threshold_seek_bar"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1"
                        android:max="62"
                        android:progress="20" />

                    <Button
                        android:id="@+id/battery_threshold_button"
                        android:layout_width="110dp"
                        android:layout_height="wrap_content"
                        android:text="@string/battery_threshold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="gone"
                    android:orientation="horizontal">

                    <SeekBar
                        android:id="@+id/pwm_seek_bar"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1"
                        android:max="254"
                        android:progress="100" />

                    <Button
                        android:id="@+id/pwm_button"
                        android:layout_width="110dp"
                        android:layout_height="wrap_content"
                        android:text="@string/pwm" />
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    android:text="@string/results"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/results_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    android:text="..."
                    android:textSize="16sp"
                    android:textStyle="italic" />
            </LinearLayout>
        </LinearLayout>

        <include layout="@layout/layout_loading"
            android:id="@+id/layout_loading_id"
            android:visibility="gone"/>
    </RelativeLayout>
</layout>
